@@ -6,6 +6,7 @@ Changelog
 
  * Fix: Make "Cancel scheduled publish" button correctly redirect back to the edit view (Sage Abdullah)
  * Fix: Prevent crash when reverting revisions on a snippet with `PreviewableMixin` applied (Sage Abdullah)
+ * Fix: Use consistent heading styles on top-level fields in the page editor (Sage Abdullah)
 
 
 4.1.1 (11.11.2022)
